[metadata]
name = heidtex
version = 0.0.1
author = Rafael Heid
author_email = rafaelheid.it@gmail.com
description = Package for transforming various python structures into LaTex.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rafaelheid-it/texpy
project_urls =
    Issue Tracker = https://github.com/rafaelheid-it/texpy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Text Processing :: Markup :: LaTeX

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src